--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 flash_attn-2.7.3-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
+flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64_base.whl filter=lfs diff=lfs merge=lfs -text
+flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64_torch_comp.whl filter=lfs diff=lfs merge=lfs -text
