--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lf
 flash_attn-2.7.3-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64_base.whl filter=lfs diff=lfs merge=lfs -text
 flash_attn-2.7.4.post1-cp311-cp311-linux_x86_64_torch_comp.whl filter=lfs diff=lfs merge=lfs -text
+flash_attn_3-3.0.0b1-cp39-abi3-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
