--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ flash_attn_3-3.0.0b1-cp39-abi3-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -t
 flash_attn_3_torch2_6_0cu12_4_compilable-3.0.0b1-cp39-abi3-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 tensorrt_llm-0.12.0-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 tensorrt_llm-0.13.0-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
+tensorrt_llm-0.13.0+torch2.4.0cu124-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
