--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ tensorrt_llm-0.13.0-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -
 tensorrt_llm-0.13.0+torch2.4.0cu124-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 flash_attn_3-3.0.0b1+cu124torch2.6cxx11abifalse-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 nvidia_nccl_cu12-2.26.2-py3-none-manylinux2014_x86_64.manylinux_2_17_x86_64.whl filter=lfs diff=lfs merge=lfs -text
+xformers-0.0.32+3f316877.d20250718-cp39-abi3-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
