--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@ tensorrt_llm-0.12.0-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -
 tensorrt_llm-0.13.0-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 tensorrt_llm-0.13.0+torch2.4.0cu124-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
 flash_attn_3-3.0.0b1+cu124torch2.6cxx11abifalse-cp311-cp311-linux_x86_64.whl filter=lfs diff=lfs merge=lfs -text
+*.whl filter=lfs diff=lfs merge=lfs -text
